# nolda

./: .gitmodules  README.md
noldaCoreRType/: .gitignore
noldaCoreRType/drafts/: keyboard-layout(9).json
noldaCoreRType/firmware/: solvePermissions.sh
noldaCoreRType/firmware/arduino/: sketch.ino
noldaCoreRType/firmware/c/: CMakeLists.txt  main.c  start_env.sh
noldaCoreRType/firmware/c/u8g2lib/: CmakeLists.txt
noldaCoreRType/firmware/circuitpython/: code.py
noldaCoreRType/firmware/micropython/: firmware.uf2
noldaCoreRType/firmware/micropython/src/: color_setup.py  main.py
noldaCoreRType/firmware/micropython/src/drivers/sharp/: sharp.py
noldaCoreRType/outlines/: plate-2023-03-26T17 32 19.870Z.dxf
noldaCoreRType/pcb/common/TP4056/: SOP127P600X175-9N.kicad_mod
noldaCoreRType/pcb/noldaCoreRType/: #auto_saved_files#  fp-info-cache  fp-lib-table  noldaCoreRType.kicad_pcb  noldaCoreRType.kicad_prl  noldaCoreRType.kicad_pro  noldaCoreRType.kicad_sch  noldaCoreRType.kicad_sch-bak  sym-lib-table  untitled.kicad_sch
noldaCoreRType/pcb/noldaCoreRType/gerbers/: noldaCoreRType-B_Cu.gbr  noldaCoreRType-B_Mask.gbr  noldaCoreRType-B_Paste.gbr  noldaCoreRType-B_Silkscreen.gbr  noldaCoreRType-Edge_Cuts.gbr  noldaCoreRType-F_Cu.gbr  noldaCoreRType-F_Mask.gbr  noldaCoreRType-F_Paste.gbr  noldaCoreRType-F_Silkscreen.gbr  noldaCoreRType-NPTH-drl-drl_map.gbr  noldaCoreRType-NPTH-drl.gbr  noldaCoreRType-PTH-drl-drl_map.gbr  noldaCoreRType-PTH-drl.gbr  noldaCoreRType-bottom-pos.csv  noldaCoreRType-job.gbrjob  noldaCoreRType-mod.csv  noldaCoreRType-top-pos-mod.csv
